--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -204,3 +204,8 @@
     </section>
   </section>
 </main>
+<!-- 스크롤 최상단 버튼 -->
+<button id="scrollTopBtn" class="scroll-top-btn" onclick="scrollToTop()">
+  <img src="/images/up.png" alt="print" />
+</button>
+<script th:src="@{/js/scrollToTop.js}"></script>
