--- a/src/main/resources/templates/myPage/home.html
+++ b/src/main/resources/templates/myPage/home.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>롯데ON::대한민국 1등 온라인 쇼핑몰</title>
     <link rel="stylesheet" th:href="@{/css/my/myinfo.css}">
+    <link rel="stylesheet" th:href="@{/css/reset.css}" />
+
 </head>
 
 <body>
@@ -240,8 +242,9 @@
             </div>
         </div>
 
-        <footer th:replace="~{layout/footer::footer}"></footer>
+
     </div>
+    <footer th:replace="~{layout/footer::footer}"></footer>
 </body>
 
 </html>
