--- a/src/main/resources/static/css/my/myinfo.css
+++ b/src/main/resources/static/css/my/myinfo.css
@@ -1,6 +1,7 @@
 #wrapper {
     width: 1200px; /* 원하는 너비로 설정 */
     margin: 0 auto; /* 가운데 정렬 */
+
 }
 
 /* 나의 쇼핑정보 */
@@ -13,6 +14,7 @@
 }
 
 .info ul {
+
     list-style: none;
     padding: 0;
     margin: 0;
@@ -20,12 +22,17 @@
     /* 어사이드 너비 */
     padding: 10px;
     border-right: 1px solid #ccc;
-    height: 100%;
+    height: 1200px
     /* 전체 높이 설정 */
 }
 
 .info ul li {
-    padding: 10px 0;
+    padding: 20px 0;
+    text-align: center;
+    font-weight: bold;
+
+
+
 }
 
 .info section {
@@ -69,6 +76,8 @@
     padding-left: 50px;
     /* 더 안쪽으로 밀어 넣기 */
     padding-top: 10px;
+    font-size: 25px;
+    font-weight: bold;
 }
 
 
@@ -127,6 +136,8 @@
     width: 45px;
     margin-top: -10px;
     font-size: 15px;
+    margin-bottom: 10px;
+    font-weight: bolder;
 }
 
 /* 사이드영역 */
@@ -145,6 +156,8 @@
     height: 40px;
     background-color: #A6A6A6;
     color: white;
+    width: auto;
+    text-align: center;
 
 }
 
