--- a/src/main/resources/static/css/policy/policy.css
+++ b/src/main/resources/static/css/policy/policy.css
@@ -107,11 +107,11 @@ h1 {
 }
 
 .terms-tabs a {
-  margin: 0 10px;
-  padding: 10px 20px;
+  margin: 0 5px;
+
   text-decoration: none;
   border: 1px solid #ddd;
-  background-color: #f8f8f8;
+
   color: #333;
   font-weight: bold;
 }
@@ -162,3 +162,54 @@ footer {
 .terms-content {
   margin-top: 10px;
 }
+
+
+
+.print-button:hover {
+  background-color: #a4a9b0; /* 호버 시 색상 */
+}
+
+.print-button {
+  background: none;  /* 버튼 배경 없앰 */
+  border: none;      /* 버튼 테두리 없앰 */
+  cursor: pointer;   /* 버튼 모양 포인터로 변경 */
+  float: right;
+}
+
+.print-button img {
+  width: 50px;  /* 이미지 크기 조정 */
+  height: auto; /* 이미지 비율 유지 */
+
+}
+
+.print-button img:hover {
+  opacity: 0.8; /* 마우스 호버 시 약간 투명하게 */
+}
+
+/* 스크롤 최상단 버튼 스타일 */
+.scroll-top-btn {
+  display: none;  /* 기본적으로 버튼을 숨김 */
+  position: fixed;  /* 화면에 고정 */
+  bottom: 20px;  /* 아래에서 20px */
+  right: 60px;   /* 오른쪽에서 20px */
+  z-index: 100;  /* 다른 요소보다 위에 위치 */
+
+  color: #333;  /* 텍스트 색상 */
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;  /* 둥근 모서리 */
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);  /* 그림자 효과 */
+
+}
+.scroll-top-btn img{
+  width: 30px;  /* 이미지 크기 조정 */
+  height: auto; /* 이미지 비율 유지 */
+}
+.scroll-top-btn:hover {
+  background-color: #ddd;  /* 마우스 호버 시 배경색 변경 */
+}
+
+
+
