--- a/src/main/resources/templates/company/index.html
+++ b/src/main/resources/templates/company/index.html
@@ -198,6 +198,11 @@
                 <img th:src="@{/images/company/기업블로그.png}">
             </div>
         </main>
+        <!-- 스크롤 최상단 버튼 -->
+        <button id="scrollTopBtn" class="scroll-top-btn" onclick="scrollToTop()">
+            <img src="/images/up.png" alt="print" />
+        </button>
+        <script th:src="@{/js/scrollToTop.js}"></script>
         <footer th:replace="~{layout/footer1::footer}"></footer>
     </div>
 </html>
