--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,42 +1,20 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원 가입</title>
-    <link rel="stylesheet" href="/css/include/header.css">
-    <link rel="stylesheet" href="/static/css/user/user_style.css">
+    <link rel="stylesheet" th:href="@{/css/user/user_style.css}">
 
 </head>
 <body>
-<header class="header" th:fragment="header">
-    <div class="header__top">
-        <div class="center header__top__nav">
-
-            <a href="#" th:href="@{/member/login}">로그인</a>
-            <a href="#" th:href="@{/member/join}">회원가입</a>
-            <a href="#">마이페이지</a>
-            <i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니
-            </a>
-            <a href="#" th:href="@{/member/logout}">로그아웃</a>
-        </div>
-    </div>
-    <div class="header__bot">
-        <div class="header__bot__wrapper center">
-            <a class="logo" href="#" th:href="@{/}"><img class="logo__img" src="/static/images/header_logo.png" th:src="@{/images/header_logo.png}" alt="로고"/></a>
-            <form class="search" action="/lotteon/product/search" method="get">
-                <input class="search__input" type="text" name="keyword"/>
-                <!-- <input  type="hidden" name="cateCode" id="cateCodeInput" value=""> -->
-                <button class="search__btn"><img width="18" class="search__btn__img" src="/static/images/search.svg" th:src="@{/images/search.svg}" /></button>
-            </form>
-        </div>
-    </div>
-</header>
+<header th:replace="~{layout/header::header}"></header>
 
 <div id="wrapper">
 
     <section class="user-section">
-        <h2>일반 회원가입</h2>
+        <h3>일반 회원가입</h3>
         <form action="#" method="post">
             <table border="0" class="heighttable">
                 <tr>
@@ -56,19 +34,21 @@
             <table border="0" class="heighttable">
                 <tr>
                     <th>이름</th>
-                    <td><input type="text" placeholder="상호명입력예 ) (주)"/></td>
-                </tr>
-                <tr>
-                    <th>성별</th>
                     <td><input type="text" placeholder="이름입력"/></td>
                 </tr>
                 <tr>
+                    <th>성별</th>
+                    <td><input type="radio" class=""/>남자
+                        <input type="radio" />여자
+                    </td>
+                </tr>
+                <tr>
                     <th>EMAIL</th>
-                    <td><input type="text" placeholder="사업자등록번호입력"/> - 포함 12 자리 입력</td>
+                    <td><input type="text" placeholder="이메일입력"/> - 포함 12 자리 입력</td>
                 </tr>
                 <tr>
                     <th>휴대폰</th>
-                    <td><input type="text" placeholder="통신판매업번호입력"/> - 포함 12 자리 입력</td>
+                    <td><input type="text" placeholder="전화번호입력"/> - 포함 12 자리 입력</td>
                 </tr>
                 <tr>
                     <th>주소</th>
@@ -81,7 +61,7 @@
             </table>
 
             <div class="registerbuttondiv">
-                <input class="registerbutton" type="submit" value="등록하기"/>
+                <a th:href="@{/user/login}" class="registerbutton" type="submit" value="등록하기">등록하기</a>
             </div>
         </form>
     </section>
