--- a/src/main/resources/templates/myPage/home.html
+++ b/src/main/resources/templates/myPage/home.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>롯데ON::대한민국 1등 온라인 쇼핑몰</title>
-    <link rel="stylesheet" th:href="@{/css/my/myinfo.css}">
+    <link rel="stylesheet" th:href="@{/css/my/home.css}">
     <link rel="stylesheet" th:href="@{/css/reset.css}" />
 
 </head>
@@ -46,13 +46,12 @@
                 </ul>
 
                 <section>
-                    <a href="#"><img src="/images/my/my_banner1.jpg" alt="패션, 타운 하나로 끝" class="banner"></a>
-
+                    <a href="#"><img src="/images/my/my_banner_sample.png" alt="롯데ON에서 드리는 다양한 결제혜택" class="banner"></a>
 
                     <!-- 사이드 영역 -->
                     <article class="latest">
                         <h3>최근주문내역</h3>
-                        <a href="#" class="more">더보기</a>
+                        <a href="#" class="more">더보기 &gt;</a>
                         <table border="0" class="widthtable">
                             <tr>
                                 <th>날짜</th>
@@ -91,7 +90,7 @@
 
                     <article class="point">
                         <h3>포인트적립내역</h3>
-                        <a href="#" class="more">더보기</a>
+                        <a href="#" class="more">더보기 &gt;</a>
                         <table border="0" class="widthtable">
                             <tr>
                                 <th>날짜</th>
@@ -121,7 +120,7 @@
                     </article>
                     <article class="review">
                         <h3>상품평</h3>
-                        <a href="#" class="more">더보기</a>
+                        <a href="#" class="more">더보기 &gt;</a>
                         <table border="0" class="widthtable">
                             <tr>
                                 <th>번호</th>
@@ -168,7 +167,7 @@
 
                     <article class="qna">
                         <h3>문의내역</h3>
-                        <a href="#" class="more">더보기</a>
+                        <a href="#" class="more">더보기 &gt;</a>
                         <table border="0" class="widthtable">
                             <tr>
                                 <th>번호</th>
