--- a/src/main/resources/templates/company/content/culture.html
+++ b/src/main/resources/templates/company/content/culture.html
@@ -1,6 +1,6 @@
 <div class="content" th:fragment="culture">
 <html xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" th:href="@{/css/company.css}">
+<link rel="stylesheet" th:href="@{/css/company/company.css}">
     <script>
         window.onload = function () {
             const blogMainText = document.getElementsByClassName('blogMainText')[0];
@@ -50,7 +50,7 @@
 
             <div class="cultureWork">
                 <div>
-                    <img th:src="@{/images/company/cultureWork1.png}">
+                    <img th:src="@{/images/company/cultureWork1.png}" style="width: 540px" height="340px">
                 </div>
                 <div>
                     <p>스스로 책임지고 자율적으로 일해요</p>
@@ -73,13 +73,13 @@
                     </span>
                 </div>
                 <div>
-                    <img th:src="@{/images/company/cultureWork2.png}">
+                    <img th:src="@{/images/company/cultureWork2.png}" style="width: 540px" height="340px">
                 </div>
             </div>
 
             <div class="cultureWork">
                 <div>
-                    <img th:src="@{/images/company/cultureWork3.webp}">
+                    <img th:src="@{/images/company/cultureWork3.webp}" style="width: 540px" height="340px">
                 </div>
                 <div>
                     <p>함께하면 할 수 있다고 믿어요.</p>
@@ -113,7 +113,7 @@
                 </div>
 
                 <div>
-                    <div>
+                    <div >
                         <img th:src="@{/images/company/icon02.png}">
                         <p>수평적인 문화</p>
                     </div>
