--- a/src/main/resources/templates/company/content/media.html
+++ b/src/main/resources/templates/company/content/media.html
@@ -1,6 +1,6 @@
 <div class="content" th:fragment="media">
     <html xmlns:th="http://www.thymeleaf.org">
-    <link rel="stylesheet" th:href="@{/css/company.css}">
+    <link rel="stylesheet" th:href="@{/css/company/company.css}">
 <!--내용 시작-->
 <div class="headContent" >
     <div class="logoBox">
