--- a/src/main/resources/templates/company/story/ESG.html
+++ b/src/main/resources/templates/company/story/ESG.html
@@ -1,6 +1,6 @@
 <div class="story" th:fragment="ESG">
     <html xmlns:th="http://www.thymeleaf.org">
-    <link rel="stylesheet" th:href="@{/css/company.css}">
+    <link rel="stylesheet" th:href="@{/css/company/company.css}">
     <div class="headContent" >
         <div class="logoBox">
             <a th:href="@{/}"><img th:src="@{/images/header_logo.png}" alt="로고" style="width: 185px;"/></a>
