--- a/src/main/resources/templates/company/story/culture.html
+++ b/src/main/resources/templates/company/story/culture.html
@@ -3,7 +3,7 @@
 
         <!--내용 시작-->
 
-        <link rel="stylesheet" th:href="@{/css/company.css}">
+        <link rel="stylesheet" th:href="@{/css/company/company.css}">
         <div class="headContent" >
             <div class="logoBox">
                 <a th:href="@{/}"><img th:src="@{/images/header_logo.png}" alt="로고" style="width: 185px;"/></a>
@@ -36,7 +36,7 @@
             </div>
 
             <div class="noticeForCard">
-                <a th:href="@{/}">
+                <a th:href="@{https://story.lotteon.com/%eb%a1%af%eb%8d%b0e%ec%bb%a4%eb%a8%b8%ec%8a%a4-%ec%82%ac%eb%9e%8c%eb%93%a4-%ec%8b%9c%eb%a6%ac%ec%a6%88-19/}">
                     <img th:src="@{/images/company/culture1.jpg}" alt="사진">
                     <p>롯데e커머스 사람들 시리즈 19</p>
                     <span >8월 M.O.M 대상 최원준 님의 패션MD 이야기 함께 들어보아요😄</span>
