--- a/src/main/resources/templates/policy/index.html
+++ b/src/main/resources/templates/policy/index.html
@@ -6,11 +6,11 @@
     <title>LotteON 서비스 이용약관</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" th:href="@{/css/policy.css}"/>
-    <link rel="stylesheet" th:href="@{/css/header.css}">
-    <link rel="stylesheet" th:href="@{/css/footer.css}">
-    <link rel="stylesheet" th:href="@{/css/reset.css}">
-    <link rel="stylesheet" th:href="@{/css/layout.css}"/>
+    <link rel="stylesheet" th:href="@{/css/policy/policy.css}"/>
+    <link rel="stylesheet" th:href="@{/css/include/header.css}">
+    <link rel="stylesheet" th:href="@{/css/include/footer.css}">
+    <link rel="stylesheet" th:href="@{/css/include/reset.css}">
+    <link rel="stylesheet" th:href="@{/css/include/layout.css}"/>
 </head>
 
 <body>
