--- a/src/main/resources/static/css/include/reset.css
+++ b/src/main/resources/static/css/include/reset.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    margin: 0;
+
   }
   
   body {
@@ -39,7 +39,7 @@
   display: none;  /* 기본적으로 버튼을 숨김 */
   position: fixed;  /* 화면에 고정 */
   bottom: 20px;  /* 아래에서 20px */
-  right: 60px;   /* 오른쪽에서 20px */
+  right: 24%;   /* 오른쪽에서 20px */
   z-index: 100;  /* 다른 요소보다 위에 위치 */
 
   color: #333;  /* 텍스트 색상 */
