--- a/src/main/resources/templates/company/content/story.html
+++ b/src/main/resources/templates/company/content/story.html
@@ -3,7 +3,7 @@
 
 <!--내용 시작-->
 
-<link rel="stylesheet" th:href="@{/css/company.css}">
+<link rel="stylesheet" th:href="@{/css/company/company.css}">
 <div class="headContent" >
     <div class="logoBox">
         <a th:href="@{/}"><img th:src="@{/images/header_logo.png}" alt="로고" style="width: 185px;"/></a>
