--- a/src/main/resources/templates/company/index.html
+++ b/src/main/resources/templates/company/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" th:href="@{/css/company.css}"/>
+    <link rel="stylesheet" th:href="@{/css/company/company.css}"/>
 
 </head>
 
