--- a/src/main/resources/templates/company/layout/company_layout.html
+++ b/src/main/resources/templates/company/layout/company_layout.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="stylesheet" th:href="@{/css/company.css}" />
+  <link rel="stylesheet" th:href="@{/css/company/company.css}" />
 </head>
 
 <body>
