--- a/src/main/resources/static/css/my/ordered.css
+++ b/src/main/resources/static/css/my/ordered.css
@@ -97,6 +97,23 @@
     object-fit: cover;
     /* 이미지가 비율을 유지하며 크기에 맞게 조정되도록 설정 */
 }
+
+
+/* 검색기능 (전체주문내역, 포인트내역) */
+.myinfoSearch {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    flex-wrap: nowrap;
+    background-color: #f2f2f2;
+    padding-left: 15px;
+    width: 100%;
+    height: 75px;
+}
+
+
 /* 더보기 */
 .more {
     float: right;
@@ -120,14 +137,13 @@
 
 /* 테이블 */
 .widthtable {
+    margin-top: 10px;
+    margin-bottom: 20px;
     border-top: 1.7px solid #000000;
-    /* 위쪽 테두리 */
     border-bottom: 0.4px solid #A6A6A6;
-    /* 아래쪽 테두리 */
     border-collapse: collapse;
     width: 100%;
     text-align: center;
-    margin-bottom: 20px;
 }
 .widthtable th {
     height: 40px;
@@ -139,7 +155,6 @@
 .widthtable td {
     padding: 10px;
 }
-
 .recentproductorderimg img {
     height: 120px;
     width: 115px;
@@ -155,6 +170,7 @@
     margin-bottom: 3px;
     border-radius: 5px
 }
+
 .reviewbutton {
     background-color: #BFBFBF;
     border: 0px;
@@ -165,61 +181,11 @@
     border-radius: 5px
 }
 
-/* 나의 설정 */
-.myinfo {
-    width: 100%;
-    height: 104px;
-    background-color: #f5f5f5;
-    border: 1px solid #e5e5e5;
-    margin: 10px 0;
-    overflow: hidden;
-}
-.address {
-    float: left;
-    width: 33.33%;
-    height: 100%;
-    padding: 16px;
-    border-right: 1px solid #eaeaea;
-    border-left: 1px solid #fdfdfd;
-    box-sizing: border-box;
-}
-.email {
-    float: left;
-    width: 33.33%;
-    height: 100%;
-    padding: 16px;
-    border-right: 1px solid #eaeaea;
-    border-left: 1px solid #fdfdfd;
-    box-sizing: border-box;
-}
-.hp {
-    float: left;
-    width: 33.33%;
-    height: 100%;
-    padding: 16px;
-    border-right: 1px solid #eaeaea;
-    border-left: 1px solid #fdfdfd;
-    box-sizing: border-box;
-}
-
 .myinfosetting div>span:first-child {
     font-weight: bold;
     font-size: 16px;
 }
 
-/* 검색기능 (전체주문내역, 포인트내역) */
-.myinfoSearch {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    /* 요소 간의 간격 */
-    flex-wrap: nowrap;
-    /* 모든 요소를 한 줄에 유지 */
-    background-color: #f2f2f2;
-    padding-left: 15px;
-    width: 100%;
-    height: 75px;
-}
 
 /* 공통 스타일 */
 .myinfoSearch input,
@@ -350,7 +316,6 @@ table.widthtable tr:last-child td {
     text-decoration: underline;
 }
 
-/* 버튼 */
 .myinfosubmitbutton {
     display: flex;
     /* 플렉스 박스 활성화 */
@@ -359,6 +324,7 @@ table.widthtable tr:last-child td {
     gap: 5px;
     margin-bottom: 10px;
 }
+
 .myinfosubmitbutton button {
     background-color: #ef2a23;
     /* 343b4d */
